--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MySpecialStalker</string>
+    <string name="channel_name">SmsChannel</string>
+    <string name="channel_description">ChannelNotifySending</string>
 </resources>
